# izhikevich

./: .gitignore  Cargo.toml  README.md  build.rs
shaders/: izhikevich.comp
src/: cpu.rs  gpu.rs  izhikevich.rs  main.rs  ui.rs
src/gpu/: gpu_wrapper.rs  mod.rs
