[package]
name = "izhikevich"
version = "0.2.0"
authors = ["Brian Lewis <keller@csh.rit.edu>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.6"
zerocopy = "0.3.0"
log = "0.4.0"
env_logger = "0.7.1"
rand = "0.7"
rand_distr = "0.3"
structopt = "0.3"
clap = "2.33"
rayon = "1.4"
tokio = { version = "0.2", features = ["full"] }
ndarray = {version = "0.13.0", features = ["rayon"]}
plotters = { version = "0.2", features = ["piston", "line_series", "point_series"] }
piston_window = "0.108"

[build-dependencies]
shaderc = "0.6"
