[package]
name = "izhikevich"
version = "0.2.0"
authors = ["Brian Lewis <keller@csh.rit.edu>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.19", features = ["spirv"] }
zerocopy = { version = "0.7.32", features = ["derive"] }
log = "0.4.0"
env_logger = "0.11"
rand = "0.8"
rand_distr = "0.4"
structopt = "0.3"
clap = "4.4"
rayon = "1.4"
tokio = { version = "1", features = ["full"] }
ndarray = { version = "0.15", features = ["rayon"] }
plotters = { version = "0.3", features = [
    # "piston",
    "line_series",
    "point_series",
] }
minifb = "0.25"

[build-dependencies]
shaderc = "0.8"
